assets/css/styles.css
.btn-primary{
    background-color: #25D366 !important;
    border-color:#25D366 !important;
    display: inline-flex  !important;
    align-items: center !important;
    justify-content: center !important; 
}

.btn-primary:hover {
    background-color: #128C7E !important;
    border-color:#128C7E !important;
}
.btn i {
    font-size: 32px; /* Tamaño fijo del ícono (ajusta según necesites) */
}

body {
    font-family: "Cormorant Upright" !important;
    background-color: #FAF3E0;
}
/*
* {
  outline: 1px solid red; 
}
*/
.navbar {
    background-color: #2C2C54;
    margin-top: 0 !important;
    padding-top: 0 !important;
    margin-bottom: 0 !important;
    padding-bottom: 0 !important;
}

.nav-link {
    color: white !important;
}

.footer {
    background-color: #2C2C54;
}

.card {
    background-color: #FAF3E0 ;
}

